--- a/book.bib
+++ b/book.bib
@@ -51,6 +51,13 @@ catalogue-url = { https://nla.gov.au/nla.cat-vn523883 },
   publisher={Oxford University Press}
 }
 
+@book{rosenberg2019philosophy,
+  title={Philosophy of science: A contemporary introduction},
+  author={Rosenberg, Alex and McIntyre, Lee},
+  year={2019},
+  publisher={Routledge}
+}
+
 @book{book-of-why,
 author = {Pearl, Judea and Mackenzie, Dana},
 title = {The Book of Why: The New Science of Cause and Effect},
@@ -193,14 +200,6 @@ edition = {1st},
   address={Oxford}
 }
 
-@book{rosenberg2019philosophy,
-  title={Philosophy of science: A contemporary introduction},
-  author={Rosenberg, Alex and McIntyre, Lee},
-  year={2019},
-  publisher={Routledge}
-}
-
-
 @book{cairo2019charts,
   title={How charts lie: Getting smarter about visual information},
   author={Cairo, Alberto},
@@ -208,6 +207,13 @@ edition = {1st},
   publisher={WW Norton \& Company}
 }
 
+
+@book{bunge2017philosophy,
+  title={Philosophy of science: volume 2, from explanation to justification},
+  author={Bunge, Mario},
+  year={2017},
+  publisher={Routledge}
+}
 
 
 @book{loukides2018ethics,
@@ -230,17 +236,6 @@ edition = {1st},
 @misc{fischer_2020, title={The necessitiy Of Non-epistemic values in machine learning modelling}, url={https://simonfischer.me/the-necessity-of-non-epistemic-values-in-machine-learning-modelling/}, journal={online and offline (being either connected or disconnected)}, author={Fischer, Simon}, year={2020}, month={Oct}}
 
 
-@article{vega2021hume,
-  title={From Hume to Wuhan: an epistemological journey on the problem of induction in COVID-19 machine learning models and its impact upon medical research},
-  author={Vega, Carlos},
-  journal={IEEE Access},
-  volume={9},
-  pages={97243--97250},
-  year={2021},
-  publisher={IEEE},
-  doi={https://doi.org/10.1109/ACCESS.2021.3095222}
-}
-
 @book{deville2014plague,
   title={Plague and cholera},
   author={Deville, Patrick},
@@ -256,4 +251,127 @@ edition = {1st},
   pages={1--21},
   year={2020},
   publisher={Springer}
+}
+
+@article{vega2021hume,
+  title={From Hume to Wuhan: an epistemological journey on the problem of induction in COVID-19 machine learning models and its impact upon medical research},
+  author={Vega, Carlos},
+  journal={IEEE Access},
+  volume={9},
+  pages={97243--97250},
+  year={2021},
+  publisher={IEEE},
+  doi={https://doi.org/10.1109/ACCESS.2021.3095222}
+}
+
+@book{kubat2017introduction,
+  title={An introduction to machine learning},
+  author={Kubat, Miroslav},
+  year={2017},
+  publisher={Springer}
+}
+
+@book{skansi2020guide,
+  title={Guide to Deep Learning Basics},
+  author={Skansi, Sandro},
+  year={2020},
+  publisher={Springer}
+}
+
+@book{domingos2015master,
+  title={The master algorithm: How the quest for the ultimate learning machine will remake our world},
+  author={Domingos, Pedro},
+  year={2015},
+  publisher={Basic Books}
+}
+
+@article{deaton2018understanding,
+  title={Understanding and misunderstanding randomized controlled trials},
+  author={Deaton, Angus and Cartwright, Nancy},
+  journal={Social Science \& Medicine},
+  volume={210},
+  pages={2--21},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{morgan2012rerandomization,
+  title={Rerandomization to improve covariate balance in experiments},
+  author={Morgan, Kari Lock and Rubin, Donald B},
+  journal={The Annals of Statistics},
+  volume={40},
+  number={2},
+  pages={1263--1282},
+  year={2012},
+  publisher={Institute of Mathematical Statistics}
+}
+
+
+@article{krause2003random,
+  title={What random assignment does and does not do},
+  author={Krause, Merton S and Howard, Kenneth I},
+  journal={Journal of Clinical Psychology},
+  volume={59},
+  number={7},
+  pages={751--766},
+  year={2003},
+  publisher={Wiley Online Library}
+}
+
+@article{paludan2016mechanisms,
+  title={Mechanisms and direction of allocation bias in randomised clinical trials},
+  author={Paludan-M{\"u}ller, Asger and Laursen, David Ruben Teindl and Hr{\'o}bjartsson, Asbj{\o}rn},
+  journal={BMC medical research methodology},
+  volume={16},
+  number={1},
+  pages={1--10},
+  year={2016},
+  publisher={BioMed Central}
+}
+
+
+@article{tsivgoulis2017under,
+  title={Under-representation of women in stroke randomized controlled trials: inadvertent selection bias leading to suboptimal conclusions},
+  author={Tsivgoulis, Georgios and Katsanos, Aristeidis H and Caso, Valeria},
+  journal={Therapeutic advances in neurological disorders},
+  volume={10},
+  number={5},
+  pages={241--244},
+  year={2017},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{yoon2014sex,
+  title={Sex bias exists in basic science and translational surgical research},
+  author={Yoon, Dustin Y and Mansukhani, Neel A and Stubbs, Vanessa C and Helenowski, Irene B and Woodruff, Teresa K and Kibbe, Melina R},
+  journal={Surgery},
+  volume={156},
+  number={3},
+  pages={508--516},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{rothwell2006factors,
+  title={Factors that can affect the external validity of randomised controlled trials},
+  author={Rothwell, Peter M},
+  journal={PLoS clinical trials},
+  volume={1},
+  number={1},
+  pages={e9},
+  year={2006},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+
+@article{scikit-learn,
+ title={Scikit-learn: Machine Learning in {P}ython},
+ author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+         and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+         and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+         Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+ journal={Journal of Machine Learning Research},
+ volume={12},
+ pages={2825--2830},
+ year={2011}
 }
