--- a/docs/POSDE_bookdown.tex
+++ b/docs/POSDE_bookdown.tex
@@ -117,7 +117,7 @@
 
 \title{Applied Philosophy of Science and Data Ethics}
 \author{Dr.~Carlos Vega}
-\date{2021: Last compiled 2021-09-02}
+\date{2021: Last compiled 2021-09-20}
 
 \begin{document}
 \maketitle
@@ -213,7 +213,7 @@ Rather than finding a proper definition of science, which many have struggled wi
 \hypertarget{scientific-goals-and-knowledge}{%
 \subsection{Scientific Goals and Knowledge}\label{scientific-goals-and-knowledge}}
 
-The main goals of science include prediction, explanation, understanding, and design. Through observation we can draw explanations and achieve understanding of nature phenomena. Once we understand we can aim to make predictions. Thanks to our understanding we can as well design experiments, instruments and solutions that help us further explaining, understanding and predicting our world. Predicting X means knowing that at time \emph{t}, X will happen. Explaining X means to know the cause(s) that produced X. Designing X requires knowing that artifact X will satisfy certain functions F. All these goals share a common ingredient, scientific knowledge. Scientists arrive to such knowledge by applying the scientific method (see § \ref{sci-method}). The goals of science are achieved through a series of activities that constitute the scientific method which include systematic observation and experimentation, inductive and deductive reasoning, and the formation and testing of hypotheses and theories.
+The main goals of science include prediction, explanation, understanding, and design. Through observation we can draw explanations and achieve understanding of nature phenomena. Once we understand we can aim to make predictions. Thanks to our understanding we can as well design experiments, instruments and solutions that help us further explaining, understanding and predicting our world. Predicting \(X\) means knowing that at time \emph{t}, \(X\) will happen. Explaining \(X\) means to know the cause(s) that produced \(X\). Designing \(X\) requires knowing that artifact \(X\) will satisfy certain functions \(F\). All these goals share a common ingredient, scientific knowledge. Scientists arrive to such knowledge by applying the scientific method (see § \ref{sci-method}). The goals of science are achieved through a series of activities that constitute the scientific method which include systematic observation and experimentation, inductive and deductive reasoning, and the formation and testing of hypotheses and theories.
 
 \begin{quote}
 Knowledge is justified true belief --- Plato (428 - 348 BC)
@@ -246,7 +246,7 @@ The most popular definition of knowledge was given by philosopher Plato in the a
 \end{itemize}
 
 Certainty of belief and truth are different. Is possible to have certain beliefs about false claims.
-Similarly, we can have uncertain beliefs about true claims. From tossing a coin, we can expect a fair probability in which head and tails have the same probability. But we cannot know for sure if the coin is biased or no until it lands. Similarly, is possible that even our best theories are wrong or partially wrong. Even after many successful experiments, they might be proved wrong (see \ref{neptune-vulcan}). In fact, scientific hypotheses can rarely if ever be proved right, they can, however, be proven wrong.
+Similarly, we can have uncertain beliefs about true claims. From tossing a coin, we can expect a fair probability in which head and tails have the same probability. But we cannot know for sure if the coin is biased or not until it lands. Similarly, is possible that even our best theories are wrong or partially wrong. Even after many successful experiments, they might be proved wrong (see \ref{neptune-vulcan}). In fact, scientific hypotheses can rarely if ever be proved right, they can, however, be proven wrong.
 
 \begin{quote}
 ``We never are definitely right, we can only be sure we are wrong'' --- Richard Feynman
@@ -346,6 +346,17 @@ See \ref{smoke-debate} for an example of how reason-based methods are not always
 
 \hypertarget{examples}{%
 \section{Examples}\label{examples}}
+
+\hypertarget{neptune-vulcan}{%
+\subsection{Neptune and Vulcan}\label{neptune-vulcan}}
+
+Newton's gravitational theory predicted the paths the planets should follow as they orbit the sun. Most of these were confirmed by observation, but the orbit of Uranus differed from Newton's predictions. In 1846 John Adams in England and Urbain Le Verrier in France solved the mystery. Both of them suggested that another planet, yet undiscovered, was the cause of an additional gravitational force exerted on Uranus. These scientists calculated the mass and position that this planet would need to have to explain Uranus' orbit. The planet Neptune was indeed found close to the location predicted by Adams and Le Verrier.
+
+So, instead of rejecting Newton's theory right away (see \ref{falsification}), these scientists stuck to it and tried to find another missing factor that could explain the difference. When the motion of Uranus was found not to match the predictions of Newton's laws, the theory ``There are seven planets in the solar system'' was rejected, and not Newton's laws themselves.
+
+However, Le Verrier also found irregularities in the motion of the planet Mercury and tried to explain them as resulting from the gravitational pull of an, again, yet undetected planet Vulcan. This hypothetical planet would have to be a very dense and small object between the sun and Mercury. In this case, no planet was found between Mercury and the sun. A satisfactory explanation was provided much later by the general theory of relativity, which justified irregularities through a new system of laws. In this case, the hypothesis or theory had to be reformulated or replaced by new one.
+
+Below you can find a \href{https://www.youtube.com/watch?v=j3mhkYbznBk\&t=1830s}{clip from lecture ``The Law of Gravitation''}, from the Messenger Lectures given by the renowned American theoretical physicist Richard Phillips Feynman.
 
 \hypertarget{michelson-morley}{%
 \subsection{The most famous ``failed'' experiment}\label{michelson-morley}}
@@ -1114,17 +1125,6 @@ Therefore, not even (conclusion)
 
 Another approach is to take the truth table of \(p \rightarrow q\) and take the case where \(p \rightarrow q\) is false - second line - i.e.~when \(p\) is true and \(q\) is false or for our case, when a card is even and its back not red (so brown). From this we need to take the cards that are \(p\) and \(\lnot q\) i.e.~even cards and brown cards.
 
-\hypertarget{neptune-vulcan}{%
-\subsection{Neptune and Vulcan}\label{neptune-vulcan}}
-
-Newton's gravitational theory predicted the paths the planets should follow as they orbit the sun. Most of these were confirmed by observation, but the orbit of Uranus differed from Newton's predictions. In 1846 John Adams in England and Urbain Le Verrier in France solved the mystery. Both of them suggested that another planet, yet undiscovered, was the cause of an additional gravitational force exerted on Uranus. These scientists calculated the mass and position that this planet would need to have to explain Uranus' orbit. The planet Neptune was indeed found close to the location predicted by Adams and Le Verrier.
-
-So, instead of rejecting Newton's theory right away (see \ref{falsification}), these scientists stuck to it and tried to find another missing factor that could explain the difference. When the motion of Uranus was found not to match the predictions of Newton's laws, the theory ``There are seven planets in the solar system'' was rejected, and not Newton's laws themselves.
-
-However, Le Verrier also found irregularities in the motion of the planet Mercury and tried to explain them as resulting from the gravitational pull of an, again, yet undetected planet Vulcan. This hypothetical planet would have to be a very dense and small object between the sun and Mercury. In this case, no planet was found between Mercury and the sun. A satisfactory explanation was provided much later by the general theory of relativity, which justified irregularities through a new system of laws. In this case, the hypothesis or theory had to be reformulated or replaced by new one.
-
-Below you can find a \href{https://www.youtube.com/watch?v=j3mhkYbznBk\&t=1830s}{clip from lecture ``The Law of Gravitation''}, from the Messenger Lectures given by the renowned American theoretical physicist Richard Phillips Feynman.
-
 \hypertarget{u.s.a.-presidents}{%
 \subsection{U.S.A. Presidents}\label{u.s.a.-presidents}}
 
@@ -1319,7 +1319,7 @@ In Chapter \ref{stats-abuse} we will see some examples of experimental errors (e
 
 \textbf{Reproduction}: An experiment is considered as reproduced if the repetition of the experiment yields the same result. For instance, in computer science, reproducing involves using the original data and code.
 
-\textbf{Replication}: An independent experiment, in the spirit of the original experiment produces the same result. For example, in computer science replication entails collecting new data and use similar methods to reach similar conclusions in answer to the same scientific question.
+\textbf{Replication}: An independent experiment, in the spirit of the original experiment produces the same result. For example, in computer science replication entails collecting new data and use similar methods to reach similar conclusions in answer to the same scientific question. Or implementing a new software following similar design principles and reaching similar results.
 
 \end{tipbox}
 
@@ -1496,6 +1496,12 @@ In data science, success should be defined by how well the analysis answers the 
 
 \hypertarget{john-snow}{%
 \subsection{1854 Broad Street cholera outbreak}\label{john-snow}}
+
+\hypertarget{study-about-honesty-is-retracted-over-fake-data}{%
+\subsection{Study about honesty is retracted over fake data}\label{study-about-honesty-is-retracted-over-fake-data}}
+
+\hypertarget{takeaway-messages}{%
+\section{Takeaway Messages}\label{takeaway-messages}}
 
 \hypertarget{stats-abuse}{%
 \chapter{Statistical abuse, Biases and Confounders}\label{stats-abuse}}
